[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lanpwner"
version = "0.1.0"
description = "Modular Offensive LAN Framework for protocol auditing and exploitation."
authors = [
    { name = "Your Name", email = "your@email.com" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "scapy",
    "netifaces",
    "zeroconf",
    "requests",
    "lxml",
    "pyyaml",
    "asyncio",
    "colorama"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "lanpwner/tests"
] 