[metadata]
name = lanpwner
version = 0.1.0
description = Modular Offensive LAN Framework for protocol auditing and exploitation.
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your@email.com
license = MIT
url = https://github.com/yourusername/lanpwner

[options]
packages = find:
python_requires = >=3.7
install_requires =
    scapy
    netifaces
    zeroconf
    requests
    lxml
    pyyaml
    asyncio
    colorama

[options.packages.find]
where = lanpwner

[options.entry_points]
console_scripts =
    lanpwner = lanpwner.cli:main 